k8s/manifests/actual-budget/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: actual-budget
  namespace: actual-budget
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`budget.greedo.net`)
      kind: Rule
      services:
        - name: actual-budget
          port: 80
  tls: {}
